merge release verifier 1.5.4.0-RC1