@@ -15,12 +15,14 @@
  */
 package ch.post.it.evoting.verifier.backend.verifications.setup.evidence;
 
-import static ch.post.it.evoting.cryptoprimitives.collection.ImmutableList.toImmutableList;
 import static com.google.common.base.Preconditions.checkState;
 
 import java.nio.file.Path;
 import java.security.SignatureException;
+import java.util.List;
+import java.util.concurrent.ConcurrentMap;
 import java.util.function.BooleanSupplier;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -28,8 +30,6 @@ import org.springframework.stereotype.Component;
 
 import com.google.common.annotations.VisibleForTesting;
 
-import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
-import ch.post.it.evoting.cryptoprimitives.collection.ImmutableMap;
 import ch.post.it.evoting.cryptoprimitives.hashing.Hashable;
 import ch.post.it.evoting.cryptoprimitives.signing.SignatureVerification;
 import ch.post.it.evoting.evotinglibraries.domain.common.ChannelSecurityContextData;
@@ -86,13 +86,13 @@ public class VerifySignatureVerificationDataAndCodeProofs extends AbstractVerifi
 	@Override
 	public VerificationResult verify(final Path inputDirectoryPath) {
 
-		final ImmutableList<Path> verificationCardSets = electionDataExtractionService.getSetupVerificationCardSetPaths(inputDirectoryPath);
+		final List<Path> verificationCardSets = electionDataExtractionService.getSetupVerificationCardSetPaths(inputDirectoryPath);
 
 		final ElectionEventContext electionEventContext = electionDataExtractionService.getElectionEventContext(inputDirectoryPath);
 
-		final ImmutableMap<String, Integer> numberOfVotingOptionsMap = electionEventContext.verificationCardSetContexts().stream()
-				.collect(ImmutableMap.toImmutableMap(
-						VerificationCardSetContext::getVerificationCardSetId,
+		final ConcurrentMap<String, Integer> numberOfVotingOptionsMap = electionEventContext.verificationCardSetContexts().stream()
+				.parallel()
+				.collect(Collectors.toConcurrentMap(VerificationCardSetContext::getVerificationCardSetId,
 						VerificationCardSetContext::getNumberOfVotingOptions));
 
 		final boolean result = verificationCardSets.stream()
@@ -103,16 +103,15 @@ public class VerifySignatureVerificationDataAndCodeProofs extends AbstractVerifi
 							.flatMap(chunk -> {
 								final SetupComponentVerificationDataPayload setupComponentVerificationData = electionDataExtractionService.getSetupComponentVerificationDataPayloadChunk(
 										path, chunk);
-								final ImmutableList<ControlComponentCodeSharesPayload> controlComponentCodeShares = electionDataExtractionService.getControlComponentCodeSharesPayloadChunkOrderByNodeId(
+								final List<ControlComponentCodeSharesPayload> controlComponentCodeShares = electionDataExtractionService.getControlComponentCodeSharesPayloadChunkOrderByNodeId(
 										path, chunk);
 
 								final int numberOfVotingOptions = numberOfVotingOptionsMap.get(
 										setupComponentVerificationData.getVerificationCardSetId());
 
-								final ImmutableList<String> verificationCardIds = setupComponentVerificationData.getSetupComponentVerificationData()
-										.stream()
+								final List<String> verificationCardIds = setupComponentVerificationData.getSetupComponentVerificationData().stream()
 										.map(SetupComponentVerificationData::verificationCardId)
-										.collect(toImmutableList());
+										.toList();
 
 								final BooleanSupplier s1 = () -> verifySignatureSetupComponentVerificationData(setupComponentVerificationData);
 
@@ -155,16 +154,15 @@ public class VerifySignatureVerificationDataAndCodeProofs extends AbstractVerifi
 	}
 
 	private BooleanSupplier verifyEncryptedCKExponentiationProofs(final SetupComponentVerificationDataPayload setupComponentVerificationData,
-			final ImmutableList<ControlComponentCodeSharesPayload> controlComponentCodeSharesPayloads,
-			final ImmutableList<String> verificationCardIds,
+			final List<ControlComponentCodeSharesPayload> controlComponentCodeSharesPayloads, final List<String> verificationCardIds,
 			final int numberOfVotingOptions) {
 
 		final VerifyEncryptedExponentiationProofsInput input = new VerifyEncryptedExponentiationProofsInput.Builder()
 				.setElectionEventId(setupComponentVerificationData.getElectionEventId())
-				.setVerificationCardSetIds(ImmutableList.of(setupComponentVerificationData.getVerificationCardSetId()))
+				.setVerificationCardSetIds(List.of(setupComponentVerificationData.getVerificationCardSetId()))
 				.build();
 
-		final ImmutableList<ContextAndInputForVerificationCardSetAndControlComponent> contextAndInputs = controlComponentCodeSharesPayloads.stream()
+		final List<ContextAndInputForVerificationCardSetAndControlComponent> contextAndInputs = controlComponentCodeSharesPayloads.stream()
 				.map(controlComponentCodeSharesPayload -> {
 
 					final VerifyEncryptedExponentiationProofsVerificationCardSetContext verificationCardSetContext = new VerifyEncryptedExponentiationProofsVerificationCardSetContext.Builder()
@@ -179,19 +177,19 @@ public class VerifySignatureVerificationDataAndCodeProofs extends AbstractVerifi
 							setupComponentVerificationData.getSetupComponentVerificationData(),
 							controlComponentCodeSharesPayload.getControlComponentCodeShares());
 					return new ContextAndInputForVerificationCardSetAndControlComponent(verificationCardSetContext, verificationCardSetInput);
-				}).collect(toImmutableList());
+				}).toList();
 		return () -> verifyEncryptedCKExponentiationProofsAlgorithm.verifyEncryptedCKExponentiationProofs(input, contextAndInputs);
 	}
 
 	private BooleanSupplier verifyEncryptedPCCExponentiationProofs(final SetupComponentVerificationDataPayload setupComponentVerificationData,
-			final ImmutableList<ControlComponentCodeSharesPayload> controlComponentCodeSharesPayloads,
-			final ImmutableList<String> verificationCardIds, final int numberOfVotingOptions) {
+			final List<ControlComponentCodeSharesPayload> controlComponentCodeSharesPayloads, final List<String> verificationCardIds,
+			final int numberOfVotingOptions) {
 
 		final VerifyEncryptedExponentiationProofsInput input = new VerifyEncryptedExponentiationProofsInput.Builder()
 				.setElectionEventId(setupComponentVerificationData.getElectionEventId())
-				.setVerificationCardSetIds(ImmutableList.of(setupComponentVerificationData.getVerificationCardSetId())).build();
+				.setVerificationCardSetIds(List.of(setupComponentVerificationData.getVerificationCardSetId())).build();
 
-		final ImmutableList<ContextAndInputForVerificationCardSetAndControlComponent> contextAndInputs = controlComponentCodeSharesPayloads.stream()
+		final List<ContextAndInputForVerificationCardSetAndControlComponent> contextAndInputs = controlComponentCodeSharesPayloads.stream()
 				.map(controlComponentCodeSharesPayload -> {
 							final VerifyEncryptedExponentiationProofsVerificationCardSetContext verificationCardSetContext = new VerifyEncryptedExponentiationProofsVerificationCardSetContext.Builder()
 									.setEncryptionGroup(controlComponentCodeSharesPayload.getEncryptionGroup())
@@ -207,7 +205,7 @@ public class VerifySignatureVerificationDataAndCodeProofs extends AbstractVerifi
 
 							return new ContextAndInputForVerificationCardSetAndControlComponent(verificationCardSetContext, verificationCardSetInput);
 						}
-				).collect(toImmutableList());
+				).toList();
 
 		return () -> verifyEncryptedPCCExponentiationProofsAlgorithm.verifyEncryptedPCCExponentiationProofs(input, contextAndInputs);
 	}
