@@ -20,12 +20,13 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Path;
+import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.verifier.backend.VerificationResult;
 import ch.post.it.evoting.verifier.backend.verifications.setup.SetupVerificationTest;
 
@@ -52,14 +53,14 @@ class VerifyChunkConsistencyTest extends SetupVerificationTest {
 		// given
 		final VerifyChunkConsistency verifyChunkConsistency = new VerifyChunkConsistency(pathService, resultPublisherServiceMock,
 				controlComponentCodeSharesPayloadDataExtractor, setupComponentVerificationDataPayloadDataExtractor);
-		final ImmutableList<ImmutableList<Path>> payloadsPerCardSet = ImmutableList.of(
-				ImmutableList.of(
+		final List<List<Path>> payloadsPerCardSet = List.of(
+				List.of(
 						Path.of("/root/dir/controlComponentPublicKeysPayload.0.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.1.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.2.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.3.json")
 				),
-				ImmutableList.of(
+				List.of(
 						Path.of("/root/dir/controlComponentPublicKeysPayload.2.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.1.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.0.json")
@@ -79,8 +80,8 @@ class VerifyChunkConsistencyTest extends SetupVerificationTest {
 		// given
 		final VerifyChunkConsistency verifyChunkConsistency = new VerifyChunkConsistency(pathService, resultPublisherServiceMock,
 				controlComponentCodeSharesPayloadDataExtractor, setupComponentVerificationDataPayloadDataExtractor);
-		final ImmutableList<ImmutableList<Path>> payloadsPerCardSet = ImmutableList.of(
-				ImmutableList.of(
+		final List<List<Path>> payloadsPerCardSet = List.of(
+				List.of(
 						Path.of("/root/dir/controlComponentPublicKeysPayload.0.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.1.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.3.json")
@@ -100,8 +101,8 @@ class VerifyChunkConsistencyTest extends SetupVerificationTest {
 		// given
 		final VerifyChunkConsistency verifyChunkConsistency = new VerifyChunkConsistency(pathService, resultPublisherServiceMock,
 				controlComponentCodeSharesPayloadDataExtractor, setupComponentVerificationDataPayloadDataExtractor);
-		final ImmutableList<ImmutableList<Path>> payloadsPerCardSet = ImmutableList.of(
-				ImmutableList.of(
+		final List<List<Path>> payloadsPerCardSet = List.of(
+				List.of(
 						Path.of("/root/dir/controlComponentPublicKeysPayload.0.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.1.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.1.json"),
@@ -122,8 +123,8 @@ class VerifyChunkConsistencyTest extends SetupVerificationTest {
 		// given
 		final VerifyChunkConsistency verifyChunkConsistency = new VerifyChunkConsistency(pathService, resultPublisherServiceMock,
 				controlComponentCodeSharesPayloadDataExtractor, setupComponentVerificationDataPayloadDataExtractor);
-		final ImmutableList<ImmutableList<Path>> payloadsPerCardSet = ImmutableList.of(
-				ImmutableList.of(
+		final List<List<Path>> payloadsPerCardSet = List.of(
+				List.of(
 						Path.of("/root/dir/controlComponentPublicKeysPayload.1.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.2.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.3.json")
@@ -143,13 +144,13 @@ class VerifyChunkConsistencyTest extends SetupVerificationTest {
 		// given
 		final VerifyChunkConsistency verifyChunkConsistency = new VerifyChunkConsistency(pathService, resultPublisherServiceMock,
 				controlComponentCodeSharesPayloadDataExtractor, setupComponentVerificationDataPayloadDataExtractor);
-		final ImmutableList<ImmutableList<Path>> payloadsPerCardSet = ImmutableList.of(
-				ImmutableList.of(
+		final List<List<Path>> payloadsPerCardSet = List.of(
+				List.of(
 						Path.of("/root/dir/controlComponentPublicKeysPayload.0.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.1.json"),
 						Path.of("/root/dir/controlComponentPublicKeysPayload.2.json")
 				),
-				ImmutableList.of(
+				List.of(
 						Path.of("/root/dir/controlComponentPublicKeysPayload.2.json")
 				)
 		);
@@ -167,7 +168,7 @@ class VerifyChunkConsistencyTest extends SetupVerificationTest {
 		// given
 		final VerifyChunkConsistency verifyChunkConsistency = new VerifyChunkConsistency(pathService, resultPublisherServiceMock,
 				controlComponentCodeSharesPayloadDataExtractor, setupComponentVerificationDataPayloadDataExtractor);
-		final ImmutableList<ImmutableList<Path>> payloadsPerCardSet = ImmutableList.emptyList();
+		final List<List<Path>> payloadsPerCardSet = Collections.emptyList();
 
 		// when
 		final boolean result = verifyChunkConsistency.isSequenceMonotonic(payloadsPerCardSet);
